# singlemalt

./: Cargo.toml  README.md  build.rs
proto/: singlemalt.proto
src/: persistence.rs  server.rs
src/server/: approximate_set_service.rs  mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs
tests/integration_tests/: Cargo.toml
tests/integration_tests/tests/: fixtures.rs  macros.rs  tests.rs
tests/integration_tests/tests/common/: mod.rs
