[package]
name = "singlemalt"
version = "0.1.0"
authors = ["Giang Nguyen <giang@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probabilistic-collections = { version = "*", features = ["serde"] }
bincode = "1.3.3"