[package]
name = "singlemalt"
version = "0.1.0"
authors = ["Giang Nguyen <giang@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probabilistic-collections = { version = "*", features = ["serde"] }
bincode = "1.3.3"
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"